--- a/app/theme.css
+++ b/app/theme.css
@@ -5,8 +5,8 @@
   --card-foreground: oklch(0.19 0.01 248.51);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.19 0.01 248.51);
-  --primary: oklch(0.67 0.16 245);
-  --primary-foreground: oklch(1 0 0);
+  --primary: #E94F1D;
+  --primary-foreground: #fff;
   --secondary: oklch(0.19 0.01 248.51);
   --secondary-foreground: oklch(1 0 0);
   --muted: oklch(0.92 0 286.37);
@@ -57,8 +57,8 @@
   --card-foreground: oklch(0.89 0 0);
   --popover: oklch(0 0 0);
   --popover-foreground: oklch(0.93 0 228.79);
-  --primary: oklch(0.67 0.16 245.01);
-  --primary-foreground: oklch(1 0 0);
+  --primary: #E94F1D;
+  --primary-foreground: #fff;
   --secondary: oklch(0.96 0 219.53);
   --secondary-foreground: oklch(0.19 0.01 248.51);
   --muted: oklch(0.21 0 0);
